toolchain/internal/core/analysis/testdata/errors/spreads/spread_field_conflict.ufo
// @expect: E203

type Base {
	id: string
	name: string
}

type User {
	...Base
	name: string
}
